--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="card">
           <img src="images/Team.png" alt="">
           <h3>Players</h3>
-          <p>Lorem ipsum dolor sit amet.</p>
+          <p>blabbla.</p>
         </div>
         <div class="card">
           <img src="images/Fans.png" alt="">
